--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     </div>
 
     <!-- Neurive Icon -->
-    <img src="neurive.png" alt="Neurive Logo" class="top-right-logo">
-
+    <img src="https://raw.githubusercontent.com/g44tsec/Neurive/main/Neurive.png" alt="Neurive Logo" class="top-right-logo">
+    
     <script src="script.js"></script>
 
     <style>
