--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
         <p id="message"></p>
     </div>
 
+    <div id="intro-hub" class="hub-container">
+    <h1>Welcome to Neurive</h1>
+    <p>Brain Games, Helping The Elderly With Cognitive Strength</p>
+    <p>Neurive focuses on improving memory, cognition, and problem-solving abilities through engaging games. Created by Ronit Kalura as part of the 2028 Congressional App Challenge, Neurive aims to provide fun, interactive brain training.</p>
+    <button class="game-btn" onclick="showGameHub()">Explore Neurive Games</button>
+</div>
+
+
     <!-- Letter Recall Game Section -->
     <div id="letter-recall" class="game-content" style="display: none;">
         <span class="close" onclick="closeGame()">&times;</span>
@@ -88,3 +96,4 @@
     </style>
 </body>
 </html>
+
