--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <h1>Welcome to Neurive</h1>
         <p>Brain Games, Helping The Elderly With Cognitive Strength</p>
         <p>Neurive focuses on improving memory, cognition, and problem-solving abilities through engaging games. Created by Ronit Kalura as part of the 2028 Congressional App Challenge, Neurive aims to provide fun, interactive brain training.</p>
+        
+        <!-- Button to show the game hub -->
         <button class="game-btn" onclick="showGameHub()">Explore Neurive Games</button>
     </div>
 
